--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,14 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
 body {
     min-width: 320px;
-    background-color: #ddd;
+    background-color: #fff;
+    line-height: 1.6;
 }
-
 ul {
     list-style: none;
 }
-
 a {
     text-decoration: none;
 }
@@ -64,4 +62,69 @@ i.fa-search {
 }
 .nav-two ul {
     display: none;
+}
+
+/* showcase */
+.showcase {
+    position: relative;
+}
+.showcase-diapo {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ddd;
+}
+.showcase-diapo img {
+    width: 100%;
+    object-fit: fill;
+}
+.showcase-text {
+    padding: 75px 25px 25px 25px;
+}
+.showcase-text a {
+    color: #333;
+}
+.showcase-text .showcase-link {
+    display: inline-block;
+    background-color: #111;
+    text-decoration: none;
+    color: #fff;
+    margin: 15px 0 45px 0;
+    padding: 10px 25px;
+    font-size: 0.9rem
+}
+.showcase-btn-controls i {
+    font-size: 0.5rem;
+    margin: 0 3px;
+}
+.showcase-btn-controls .fa-play,
+.showcase-btn-controls .fa-pause {
+    margin-left: 25px;
+    font-size: 0.8rem;
+}
+.showcase-btn-controls span {
+    border: 1px solid #333;
+    padding: 7px;
+    background-color: #fff;
+    display: none;
+}
+.showcase-btn-prev,
+.showcase-btn-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: #333;
+    cursor: pointer;
+}
+.showcase-btn-prev {
+    left: 0;
+}
+.showcase-btn-next {
+    right: 0;
 }
