--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ ul {
 a {
     text-decoration: none;
 }
+.container {
+    margin: 0 15px;
+}
 
 /* header */
 header {
@@ -31,12 +34,26 @@ header {
     align-items: center;
     justify-content: space-between;
 }
+
+.nav-one-left {
+    width: 17%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .nav-one form {
     display: none;
 }
 .nav-one i {
     color: #333;
     font-size: 1.2rem;
+}
+
+.nav-one-right {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 i.fa-user-circle {
     font-size: 2rem;
@@ -57,16 +74,11 @@ i.fa-search {
     max-width: 100%;
     width: 120px;
 }
-.nav-one ul {
-    display: none;
-}
-.nav-two ul {
-    display: none;
-}
 
 /* showcase */
 .showcase {
     position: relative;
+    margin-bottom: 55px;
 }
 .showcase-diapo {
     text-align: center;
@@ -127,4 +139,87 @@ i.fa-search {
 }
 .showcase-btn-next {
     right: 0;
+}
+
+/* Products */
+.products-container .nav-three {
+    margin-bottom: 55px;
+}
+.products-container .nav-three img {
+    width: 20px;
+}
+.products-container .nav-three ul li {
+    position: relative;
+    margin-bottom: 15px;
+}
+.products-container .nav-three ul li a {
+    margin-left: 5px;
+    color: #111;
+    position: relative;
+    top: -3px;
+}
+.products-items .item {
+    margin-bottom: 55px;
+}
+.products-items img {
+    width: 100%;
+    margin-bottom: 15px;
+}
+.products-items .item .item-new {
+    display: inline-block;
+    padding: 2px 15px;
+    color: white;
+    background-color: goldenrod;
+}
+.products-items .item h3 {
+    margin-bottom: 10px;
+}
+.products-items .item a {
+    display: block;
+    margin: 10px 0;
+}
+
+/* News letter */
+.news-letter {
+    margin-bottom: 35px;
+}
+.news-letter .news-letter-images img {
+    display: block;
+    width: 100%;
+}
+.news-letter-text {
+    text-align: center;
+    color: #fff;
+    padding: 45px;
+    background-color: #333;
+}
+.news-letter-text p {
+    margin-bottom: 15px;
+}
+.news-letter-text a {
+    background-color: #fff;
+    color: #111;
+    padding: 10px 25px;
+}
+
+/* Follow */
+.follow {
+    margin-bottom: 45px;
+}
+.follow ul {
+    display: inline-block;
+    width: 150px;
+    vertical-align: middle;
+}
+.follow ul li {
+    margin: 0 5px;
+    display: inline-block;
+}
+.follow ul li img {
+    width: 100%;
+    max-width: 30px;
+}
+.follow span:last-child {
+    display: block;
+    margin-top: 15px;
 }
